Bug 172870 - [GCrypt] Gather SUBTLE_CRYPTO utility functions in a single header
Summary: [GCrypt] Gather SUBTLE_CRYPTO utility functions in a single header
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: New Bugs (show other bugs)
Version: WebKit Nightly Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Zan Dobersek
URL:
Keywords:
Depends on:
Blocks: 133122
  Show dependency treegraph
 
Reported: 2017-06-02 13:03 PDT by Zan Dobersek
Modified: 2017-06-03 03:29 PDT (History)
3 users (show)

See Also:


Attachments
Patch (21.52 KB, patch)
2017-06-02 13:09 PDT, Zan Dobersek
jiewen_tan: review+
Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Zan Dobersek 2017-06-02 13:03:51 PDT
[GCrypt] Gather Web Crypto utility functions in a single header
Comment 1 Zan Dobersek 2017-06-02 13:09:59 PDT
Created attachment 311849 [details]
Patch
Comment 2 Build Bot 2017-06-02 13:12:11 PDT
Attachment 311849 [details] did not pass style-queue:


ERROR: Source/WebCore/crypto/gcrypt/GCryptUtilities.h:68:  More than one command on the same line  [whitespace/newline] [4]
Total errors found: 1 in 8 files


If any of these errors are false positives, please file a bug against check-webkit-style.
Comment 3 Jiewen Tan 2017-06-02 16:40:44 PDT
Comment on attachment 311849 [details]
Patch

Looks good to me. Michael, please double checks if there are any missing ones.
Comment 4 Michael Catanzaro 2017-06-02 18:05:03 PDT
Comment on attachment 311849 [details]
Patch

View in context: https://bugs.webkit.org/attachment.cgi?id=311849&action=review

Looks good to me as well... I just wonder why it wasn't written this way from the start!

> Source/WebCore/crypto/gcrypt/GCryptUtilities.h:68
> +        return std::nullopt;;

One too many semicolons!
Comment 5 Jiewen Tan 2017-06-02 18:50:50 PDT
Comment on attachment 311849 [details]
Patch

View in context: https://bugs.webkit.org/attachment.cgi?id=311849&action=review

>> Source/WebCore/crypto/gcrypt/GCryptUtilities.h:68
>> +        return std::nullopt;;
> 
> One too many semicolons!

Oops...
Comment 6 Zan Dobersek 2017-06-03 03:29:35 PDT
Committed r217754: <http://trac.webkit.org/changeset/217754>